cmake_minimum_required(VERSION 3.0.2)
project(Models)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${BORIS_MATH_INCLUDE_DIRS})

aux_source_directory(. VEHICLE_MODELS_SRC_FILES)
add_library(VEHICLE_MODELS_LIB ${VEHICLE_MODELS_SRC_FILES})

SET(VEHICLE_MODELS_LIBRARIES VEHICLE_MODELS_LIB PARENT_SCOPE)
SET(VEHICLE_MODELS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)