cmake_minimum_required(VERSION 3.0.2)
project(Utils)

include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${PLANNING_MATH_INCLUDE_DIRS})

aux_source_directory(. PLANNING_UTILS_SRC_FILES)
add_library(PLANNING_UTILS_LIB ${PLANNING_UTILS_SRC_FILES})

SET(PLANNING_UTILS_LIBRARIES PLANNING_UTILS_LIB PARENT_SCOPE)
SET(PLANNING_UTILS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)